fix(devtools): align theme to other Chrome DevTools
fixes rangle/angular-devtools#489 contrast issue
fixes rangle/angular-devtools#594 double scrolling
changes colors to follow Chrome DevTools tabs (first pass)

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,7 +10,7 @@ body {
 }
 
 // Light theme
-$light-primary: mat-palette($mat-grey, 700);
+$light-primary: mat-palette($mat-grey, 700, 200);
 $light-accent: mat-palette($mat-teal, 300);
 $light-theme: mat-light-theme($light-primary, $light-accent);
 
